// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`E1 Hit and Run knight captures a Poisoned Meat pawn (neutral elements) > E1 R-ABIL-003 R-ABIL-004 INV-05 pawn removed, Poisoned Meat removes the knight, Hit and Run fizzles with no body 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 18,
      "to": 35,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 1,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 35,
    "victim": 2,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 18,
    "i": 3,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 35,
  },
  {
    "ability": "poisoned_meat",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 2,
    "pieceType": "pawn",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "by": "effect",
    "captor": 2,
    "depth": 0,
    "i": 6,
    "k": "Captured",
    "source": {
      "id": "poisoned_meat",
      "kind": "ability",
      "piece": 2,
      "side": "black",
    },
    "square": 35,
    "victim": 1,
    "victimSide": "white",
    "victimType": "knight",
  },
  {
    "ability": "hit_and_run",
    "attuned": false,
    "category": "CAPTURES",
    "depth": 0,
    "i": 7,
    "k": "AbilityTriggered",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 8,
    "info": {
      "ability": "hit_and_run",
      "kind": "ability",
      "pieceType": "knight",
    },
    "k": "Revealed",
    "side": "white",
  },
  {
    "ability": "hit_and_run",
    "depth": 0,
    "effect": "move",
    "i": 9,
    "k": "EffectFizzled",
    "piece": 1,
    "pieceType": "knight",
    "reason": "no_body",
    "side": "white",
    "target": 1,
  },
  {
    "depth": 0,
    "i": 10,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E2 as E1, but the knight also has Pierce > E2 R-ABIL-002 R-INFO-002 Pierce negates Poisoned Meat (revealed as negated) and the knight returns to its origin 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 18,
      "to": 35,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "ability": "pierce",
    "attuned": false,
    "category": "CAPTURING",
    "depth": 0,
    "i": 2,
    "k": "AbilityTriggered",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 3,
    "info": {
      "ability": "pierce",
      "kind": "ability",
      "pieceType": "knight",
    },
    "k": "Revealed",
    "side": "white",
  },
  {
    "by": "move",
    "captor": 1,
    "depth": 0,
    "i": 4,
    "k": "Captured",
    "square": 35,
    "victim": 2,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 18,
    "i": 5,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 35,
  },
  {
    "ability": "poisoned_meat",
    "category": "CAPTURED",
    "depth": 0,
    "i": 6,
    "k": "AbilityNegated",
    "piece": 2,
    "pieceType": "pawn",
    "side": "black",
    "source": {
      "id": "pierce",
      "kind": "ability",
      "piece": 1,
      "side": "white",
    },
  },
  {
    "cause": "negated",
    "depth": 0,
    "i": 7,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "ability": "hit_and_run",
    "attuned": false,
    "category": "CAPTURES",
    "depth": 0,
    "i": 8,
    "k": "AbilityTriggered",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 9,
    "info": {
      "ability": "hit_and_run",
      "kind": "ability",
      "pieceType": "knight",
    },
    "k": "Revealed",
    "side": "white",
  },
  {
    "depth": 0,
    "from": 35,
    "i": 10,
    "k": "PieceMoved",
    "piece": 1,
    "side": "white",
    "source": {
      "id": "hit_and_run",
      "kind": "ability",
      "piece": 1,
      "side": "white",
    },
    "to": 18,
  },
  {
    "depth": 0,
    "i": 11,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E3 a king captures a Poisoned Meat pawn > E3 R-RULES-003 R-RULES-004 INV-07 DD-32 Stalwart king: retaliation fizzles by Royal Immunity, king survives, Stalwart stays hidden 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 4,
      "to": 12,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 0,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 12,
    "victim": 1,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 4,
    "i": 3,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "king",
    "side": "white",
    "to": 12,
  },
  {
    "ability": "poisoned_meat",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 1,
    "pieceType": "pawn",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "ability": "poisoned_meat",
    "depth": 0,
    "effect": "effectCapture",
    "i": 6,
    "k": "EffectFizzled",
    "piece": 1,
    "pieceType": "pawn",
    "reason": "royal_immunity",
    "side": "black",
    "source": {
      "id": "royal_immunity",
      "kind": "rule",
    },
    "target": 0,
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E3 a king captures a Poisoned Meat pawn > E3 R-RULES-004 INV-02 INV-07 ordinary king: retaliation fizzles by Royal Immunity, ability revealed, king survives 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 4,
      "to": 12,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 0,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 12,
    "victim": 1,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 4,
    "i": 3,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "king",
    "side": "white",
    "to": 12,
  },
  {
    "ability": "poisoned_meat",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 1,
    "pieceType": "pawn",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "ability": "poisoned_meat",
    "depth": 0,
    "effect": "effectCapture",
    "i": 6,
    "k": "EffectFizzled",
    "piece": 1,
    "pieceType": "pawn",
    "reason": "royal_immunity",
    "side": "black",
    "source": {
      "id": "royal_immunity",
      "kind": "rule",
    },
    "target": 0,
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E4 First Blood: a queen captures a Poisoned Meat pawn > E4 R-FMT-001 R-FMT-002 DD-25 DD-38 Poisoned Meat removes the queen: the pawn's owner wins after the chain settles 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 3,
      "to": 35,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 0,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 35,
    "victim": 2,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 3,
    "i": 3,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "queen",
    "side": "white",
    "to": 35,
  },
  {
    "ability": "poisoned_meat",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 2,
    "pieceType": "pawn",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "by": "effect",
    "captor": 2,
    "depth": 0,
    "i": 6,
    "k": "Captured",
    "source": {
      "id": "poisoned_meat",
      "kind": "ability",
      "piece": 2,
      "side": "black",
    },
    "square": 35,
    "victim": 0,
    "victimSide": "white",
    "victimType": "queen",
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 8,
    "k": "BattleEnded",
    "result": {
      "reason": "objective",
      "winner": "black",
    },
  },
]
`;

exports[`E5 a rook shielding its king captures a Poisoned Meat pawn > E5 INV-03 removing the rook would expose the white king, so Poisoned Meat fizzles 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 12,
      "to": 36,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 1,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 36,
    "victim": 2,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 12,
    "i": 3,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "rook",
    "side": "white",
    "to": 36,
  },
  {
    "ability": "poisoned_meat",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 2,
    "pieceType": "pawn",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "poisoned_meat",
      "kind": "ability",
      "pieceType": "pawn",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "ability": "poisoned_meat",
    "depth": 0,
    "effect": "effectCapture",
    "i": 6,
    "k": "EffectFizzled",
    "piece": 2,
    "pieceType": "pawn",
    "reason": "inv03",
    "side": "black",
    "source": {
      "id": "inv03",
      "kind": "rule",
    },
    "target": 1,
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E6 a bishop captures a knight with Riposte > E6 R-ABIL-003 INV-01 DD-18 DD-21 the knight's owner picks a legal capturer; the capture runs a nested pipeline at depth 1 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 19,
      "to": 46,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 1,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 46,
    "victim": 2,
    "victimSide": "black",
    "victimType": "knight",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 19,
    "i": 3,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "bishop",
    "side": "white",
    "to": 46,
  },
  {
    "ability": "riposte",
    "attuned": false,
    "category": "CAPTURED",
    "depth": 0,
    "i": 4,
    "k": "AbilityTriggered",
    "piece": 2,
    "pieceType": "knight",
    "side": "black",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 5,
    "info": {
      "ability": "riposte",
      "kind": "ability",
      "pieceType": "knight",
    },
    "k": "Revealed",
    "side": "black",
  },
  {
    "depth": 0,
    "i": 6,
    "k": "ChoiceMade",
    "option": {
      "from": 55,
      "kind": "move",
      "to": 46,
    },
    "promptId": "0.0",
    "side": "black",
  },
  {
    "by": "move",
    "captor": 4,
    "depth": 1,
    "i": 7,
    "k": "Captured",
    "square": 46,
    "victim": 1,
    "victimSide": "white",
    "victimType": "bishop",
  },
  {
    "bonus": true,
    "capture": true,
    "depth": 1,
    "from": 55,
    "i": 8,
    "k": "MoveMade",
    "piece": 4,
    "pieceType": "pawn",
    "side": "black",
    "to": 46,
  },
  {
    "depth": 0,
    "i": 9,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
]
`;

exports[`E7 Hot Foot: an Ember knight captures on e5, then leaves it > E7 R-ELEM-005 e5 ignites for 3 opponent turns: non-Ember pieces may not enter or capture there, sliders pass over, then it goes out 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 26,
      "to": 36,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "by": "move",
    "captor": 1,
    "depth": 0,
    "i": 2,
    "k": "Captured",
    "square": 36,
    "victim": 2,
    "victimSide": "black",
    "victimType": "pawn",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 26,
    "i": 3,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 36,
  },
  {
    "depth": 0,
    "i": 4,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 5,
    "k": "ActionStarted",
    "move": {
      "from": 56,
      "to": 57,
    },
    "ply": 1,
    "side": "black",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 56,
    "i": 6,
    "k": "MoveMade",
    "piece": 4,
    "pieceType": "king",
    "side": "black",
    "to": 57,
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 2,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 8,
    "k": "ActionStarted",
    "move": {
      "from": 36,
      "to": 21,
    },
    "ply": 2,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 36,
    "i": 9,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 21,
  },
  {
    "depth": 0,
    "i": 10,
    "k": "SquareIgnited",
    "side": "white",
    "square": 36,
    "turns": 3,
  },
  {
    "depth": 0,
    "i": 11,
    "k": "TurnPassed",
    "ply": 3,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 12,
    "k": "ActionStarted",
    "move": {
      "from": 60,
      "to": 28,
    },
    "ply": 3,
    "side": "black",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 60,
    "i": 13,
    "k": "MoveMade",
    "piece": 5,
    "pieceType": "rook",
    "side": "black",
    "to": 28,
  },
  {
    "depth": 0,
    "i": 14,
    "k": "TurnPassed",
    "ply": 4,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 15,
    "k": "ActionStarted",
    "move": {
      "from": 21,
      "to": 36,
    },
    "ply": 4,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 21,
    "i": 16,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 36,
  },
  {
    "depth": 0,
    "i": 17,
    "k": "TurnPassed",
    "ply": 5,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 18,
    "k": "ActionStarted",
    "move": {
      "from": 57,
      "to": 56,
    },
    "ply": 5,
    "side": "black",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 57,
    "i": 19,
    "k": "MoveMade",
    "piece": 4,
    "pieceType": "king",
    "side": "black",
    "to": 56,
  },
  {
    "depth": 0,
    "i": 20,
    "k": "TurnPassed",
    "ply": 6,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 21,
    "k": "ActionStarted",
    "move": {
      "from": 36,
      "to": 21,
    },
    "ply": 6,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 36,
    "i": 22,
    "k": "MoveMade",
    "piece": 1,
    "pieceType": "knight",
    "side": "white",
    "to": 21,
  },
  {
    "depth": 0,
    "i": 23,
    "k": "TurnPassed",
    "ply": 7,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 24,
    "k": "ActionStarted",
    "move": {
      "from": 56,
      "to": 57,
    },
    "ply": 7,
    "side": "black",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 56,
    "i": 25,
    "k": "MoveMade",
    "piece": 4,
    "pieceType": "king",
    "side": "black",
    "to": 57,
  },
  {
    "depth": 0,
    "i": 26,
    "k": "SquareExtinguished",
    "square": 36,
  },
  {
    "depth": 0,
    "i": 27,
    "k": "TurnPassed",
    "ply": 8,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 28,
    "k": "ActionStarted",
    "move": {
      "from": 6,
      "to": 14,
    },
    "ply": 8,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 6,
    "i": 29,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "king",
    "side": "white",
    "to": 14,
  },
  {
    "depth": 0,
    "i": 30,
    "k": "TurnPassed",
    "ply": 9,
    "side": "black",
  },
]
`;

exports[`E8 Flow: a Tide rook behind its own pawn > E8 R-ELEM-006 the rook checks the enemy king through its own pawn and may move a1-a5 through it 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 1,
      "to": 0,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 1,
    "i": 2,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "rook",
    "side": "white",
    "to": 0,
  },
  {
    "depth": 0,
    "i": 3,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 4,
    "k": "Check",
    "side": "black",
    "square": 56,
  },
  {
    "depth": 0,
    "i": 5,
    "k": "ActionStarted",
    "move": {
      "from": 56,
      "to": 57,
    },
    "ply": 1,
    "side": "black",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 56,
    "i": 6,
    "k": "MoveMade",
    "piece": 3,
    "pieceType": "king",
    "side": "black",
    "to": 57,
  },
  {
    "depth": 0,
    "i": 7,
    "k": "TurnPassed",
    "ply": 2,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 8,
    "k": "ActionStarted",
    "move": {
      "from": 0,
      "to": 32,
    },
    "ply": 2,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 0,
    "i": 9,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "rook",
    "side": "white",
    "to": 32,
  },
  {
    "depth": 0,
    "i": 10,
    "k": "TurnPassed",
    "ply": 3,
    "side": "black",
  },
]
`;

exports[`E9 Overabundance: a Grove bishop with Rebirth is captured three times > E9 R-ELEM-007 R-ABIL-004 DD-17 DD-22 Rebirth has 2 charges on a Grove piece: the bishop returns twice, the third capture is final 1`] = `
[
  {
    "depth": 0,
    "i": 1,
    "k": "ActionStarted",
    "move": {
      "from": 2,
      "to": 11,
    },
    "ply": 0,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 2,
    "i": 2,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "bishop",
    "side": "white",
    "to": 11,
  },
  {
    "depth": 0,
    "i": 3,
    "k": "TurnPassed",
    "ply": 1,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 4,
    "k": "ActionStarted",
    "move": {
      "from": 59,
      "to": 11,
    },
    "ply": 1,
    "side": "black",
  },
  {
    "by": "move",
    "captor": 2,
    "depth": 0,
    "i": 5,
    "k": "Captured",
    "square": 11,
    "victim": 0,
    "victimSide": "white",
    "victimType": "bishop",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 59,
    "i": 6,
    "k": "MoveMade",
    "piece": 2,
    "pieceType": "rook",
    "side": "black",
    "to": 11,
  },
  {
    "ability": "rebirth",
    "attuned": true,
    "category": "CAPTURED",
    "depth": 0,
    "i": 7,
    "k": "AbilityTriggered",
    "piece": 0,
    "pieceType": "bishop",
    "side": "white",
  },
  {
    "cause": "activated",
    "depth": 0,
    "i": 8,
    "info": {
      "ability": "rebirth",
      "kind": "ability",
      "pieceType": "bishop",
    },
    "k": "Revealed",
    "side": "white",
  },
  {
    "depth": 0,
    "i": 9,
    "k": "ChoiceMade",
    "option": {
      "kind": "square",
      "square": 2,
    },
    "promptId": "1.0",
    "side": "white",
  },
  {
    "depth": 0,
    "i": 10,
    "k": "PieceRevived",
    "piece": 0,
    "side": "white",
    "source": {
      "id": "rebirth",
      "kind": "ability",
      "piece": 0,
      "side": "white",
    },
    "square": 2,
  },
  {
    "ability": "rebirth",
    "depth": 0,
    "i": 11,
    "k": "ChargeSpent",
    "piece": 0,
    "pieceType": "bishop",
    "remaining": 1,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 12,
    "k": "TurnPassed",
    "ply": 2,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 13,
    "k": "ActionStarted",
    "move": {
      "from": 2,
      "to": 9,
    },
    "ply": 2,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 2,
    "i": 14,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "bishop",
    "side": "white",
    "to": 9,
  },
  {
    "depth": 0,
    "i": 15,
    "k": "TurnPassed",
    "ply": 3,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 16,
    "k": "ActionStarted",
    "move": {
      "from": 11,
      "to": 9,
    },
    "ply": 3,
    "side": "black",
  },
  {
    "by": "move",
    "captor": 2,
    "depth": 0,
    "i": 17,
    "k": "Captured",
    "square": 9,
    "victim": 0,
    "victimSide": "white",
    "victimType": "bishop",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 11,
    "i": 18,
    "k": "MoveMade",
    "piece": 2,
    "pieceType": "rook",
    "side": "black",
    "to": 9,
  },
  {
    "ability": "rebirth",
    "attuned": true,
    "category": "CAPTURED",
    "depth": 0,
    "i": 19,
    "k": "AbilityTriggered",
    "piece": 0,
    "pieceType": "bishop",
    "side": "white",
  },
  {
    "depth": 0,
    "i": 20,
    "k": "ChoiceMade",
    "option": {
      "kind": "square",
      "square": 2,
    },
    "promptId": "3.0",
    "side": "white",
  },
  {
    "depth": 0,
    "i": 21,
    "k": "PieceRevived",
    "piece": 0,
    "side": "white",
    "source": {
      "id": "rebirth",
      "kind": "ability",
      "piece": 0,
      "side": "white",
    },
    "square": 2,
  },
  {
    "ability": "rebirth",
    "depth": 0,
    "i": 22,
    "k": "ChargeSpent",
    "piece": 0,
    "pieceType": "bishop",
    "remaining": 0,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 23,
    "k": "TurnPassed",
    "ply": 4,
    "side": "white",
  },
  {
    "depth": 0,
    "i": 24,
    "k": "ActionStarted",
    "move": {
      "from": 2,
      "to": 11,
    },
    "ply": 4,
    "side": "white",
  },
  {
    "bonus": false,
    "capture": false,
    "depth": 0,
    "from": 2,
    "i": 25,
    "k": "MoveMade",
    "piece": 0,
    "pieceType": "bishop",
    "side": "white",
    "to": 11,
  },
  {
    "depth": 0,
    "i": 26,
    "k": "TurnPassed",
    "ply": 5,
    "side": "black",
  },
  {
    "depth": 0,
    "i": 27,
    "k": "ActionStarted",
    "move": {
      "from": 9,
      "to": 11,
    },
    "ply": 5,
    "side": "black",
  },
  {
    "by": "move",
    "captor": 2,
    "depth": 0,
    "i": 28,
    "k": "Captured",
    "square": 11,
    "victim": 0,
    "victimSide": "white",
    "victimType": "bishop",
  },
  {
    "bonus": false,
    "capture": true,
    "depth": 0,
    "from": 9,
    "i": 29,
    "k": "MoveMade",
    "piece": 2,
    "pieceType": "rook",
    "side": "black",
    "to": 11,
  },
  {
    "depth": 0,
    "i": 30,
    "k": "TurnPassed",
    "ply": 6,
    "side": "white",
  },
]
`;
